Fix filters and navigation z-index

--- a/app/javascript/stylesheets/application_v2/pages/_index_page.scss
+++ b/app/javascript/stylesheets/application_v2/pages/_index_page.scss
@@ -9,7 +9,7 @@
 #index-filters {
   position: sticky;
   top: $header-height-mobile;
-  z-index: $zindex-modal - 1;
+  z-index: $zindex-fixed + 1;
 
   @include media-breakpoint-up(md) {
     top: $header-height-tablet;
